# linux-application-development

./: README.md
03_Multifile/: Makefile  fun.c  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  correct_output_01.txt  correct_output_02.txt  gdb_script_01.txt  gdb_script_02.txt  range.c
06_TracingFencing/: Makefile  move.c  my_remove.c  test_01.sh  test_02.sh  test_03.sh  test_04.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_Regexps/: Makefile.am  configure.ac  esub.c
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  libbuf.c
09_Testing/tests/: Makefile  Makefile.am  Makefile.in  tests.c  tests.ts
10_I18n/: configure.ac
10_I18n/po/: Makefile.am  guess_num.pot  ru.po
10_I18n/src/: Makefile.am  guess_num.c
